[gd_scene load_steps=13 format=2]

[ext_resource path="res://art/anemy/blob/slimesesse2.png" type="Texture" id=1]
[ext_resource path="res://enemy.gd" type="Script" id=2]
[ext_resource path="res://art/anemy/blob/slimesesse1.png" type="Texture" id=3]
[ext_resource path="res://art/anemy/blob/slimesesse4.png" type="Texture" id=4]
[ext_resource path="res://art/anemy/blob/slimesesse3.png" type="Texture" id=5]
[ext_resource path="res://art/anemy/blob/hitblob.png" type="Texture" id=6]
[ext_resource path="res://light animted.tres" type="Texture" id=7]
[ext_resource path="res://sound/hits/zapsplat_impacts_body_hit_baseball_bat_hard_whack_crack_squelchy_bloody_005_44151.wav" type="AudioStream" id=8]
[ext_resource path="res://jhitsound.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6.875, 3.59375 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8.53228, 4.14819 )

[node name="enemy" type="KinematicBody2D"]
z_index = 2
collision_layer = 16384
collision_mask = 32796
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0625, 4.34375 )
shape = SubResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.0745811, 0.000255585 )
frames = SubResource( 3 )
animation = "run"
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.223656, 4.46069 )
shape = SubResource( 5 )

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( -0.0479641, 5.65961 )
enabled = true
cast_to = Vector2( 7.3537, 0.255586 )
collision_mask = 12

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -0.0220971, 5.63672 )
enabled = true
cast_to = Vector2( -7.20063, 0.0816112 )
collision_mask = 12

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 5.65512 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 7 )
shadow_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="stopTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -16.9375
margin_top = -14.625
margin_right = 23.0625
margin_bottom = -0.625

[node name="jhitsound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 2.476
script = ExtResource( 9 )

[node name="invcibleTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="stopTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="invcibleTimer" to="." method="_on_invcibleTimer_timeout"]
